src/bgworker/snapshots/roco_rs__bgworker__sqlt__tests__can_dequeue.snap
---
source: src/bgworker/sqlt.rs
expression: job_after_dequeue
snapshot_kind: text
---
Job {
    id: "<REDACTED>",
    name: "PasswordChangeNotification",
    data: Object {
        "user_id": Number(1),
    },
    status: Processing,
    run_at: <REDACTED>,
    interval: None,
    created_at: Some(
        <REDACTED>,
    ),
    updated_at: Some(
        <REDACTED>,
    ),
    tags: None,
}
